Profile Creating When Register Started

--- a/hatcher_source/templates/blocks/dashboard_block.html
+++ b/hatcher_source/templates/blocks/dashboard_block.html
@@ -70,7 +70,7 @@
         <div class="profile_box visually-hidden" id="options_box">
 
           <div >
-            <a href="" class="d-flex nav-link active " style="align-items: center;">
+            <a href="{% url 'dashboard:profile' %}" target="_blank" class="d-flex nav-link active " style="align-items: center;">
             <svg width="16" style="margin: 5px;" height="16" viewBox="0 0 16 16"
               fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
