--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hatcher</title>
+    {% load static %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link  href="/media/logos/hatcher_tab.png" rel="icon" type="image/png">
