--- a/hatcher_source/templates/blocks/dashboard_block.html
+++ b/hatcher_source/templates/blocks/dashboard_block.html
@@ -200,7 +200,7 @@
   <a href="#top"><img width="50" height="50" id="Up_Arrow" src="https://img.icons8.com/ios-filled/50/page-up-button.png"
       alt="page-up-button" />
   </a>
-  <script src="{% static 'js/dashboard.js' %}"></script>
+  <script src="{% static 'js/candidate_dashboard/dashboard.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
