--- a/hatcher_source/templates/dashboard/job_detail.html
+++ b/hatcher_source/templates/dashboard/job_detail.html
@@ -105,5 +105,5 @@
 {% endblock content %}
 {% block javascripts %}
 {% load static %}
-<script src="{% static 'js/job_detail.js'%}"></script>
+<script src="{% static 'js/candidate_dashboard/job_detail.js'%}"></script>
 {% endblock javascripts %}
