--- a/hatcher_source/static/css/home.css
+++ b/hatcher_source/static/css/home.css
@@ -81,12 +81,13 @@
     top: 185px;
     right: 433px;
     width: 242px;
+    height: 209px;
+    overflow-y: auto;
 }
 
 .autocomplete-item{
     font-size: larger;
     padding: 5px;
-    border-bottom: 2px solid #0000004f;
 }
 .autocomplete-item:hover {
     background: #8080802e;
