--- a/hatcher_source/templates/profile/basic_detail.html
+++ b/hatcher_source/templates/profile/basic_detail.html
@@ -21,94 +21,115 @@
         <div class="detail_container" id="basic_detail">
             <h2 class="text-center">Basic Details</h2>
             <div class="mb-3">
-                <label for="birth_date" class="form-label">Birth Date</label>
-                <input type="text" class="cutom_inp" id="birth_date" placeholder="Choose Date"
-                    onfocus="(this.type='date')" onblur="(this.type='text')" type="text">
+                <label for="birth_date" class="form-label compulsory">Birth Date</label>
+                <br>
+                
+                    <input type="text" name="selectedDate" id="txtDate" placeholder="Choose date" />
+            
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
+                <label for="exampleFormControlTextarea1" class="form-label compulsory">Bio</label>
                 <textarea class="cutom_inp" id="exampleFormControlTextarea1"
                     placeholder="Describe yourself in few words " rows="1"></textarea>
             </div>
-            <div class="">
-                <label class="form-label">Gender</label>
+            <div class="mb-2">
+                <label class="form-label compulsory">Gender</label>
                 <br>
                 <input type="radio" name="gender" id="male">
-                <label class="form-label" for="male">male</label>
+                <label class="" for="male">male</label>
                 <input type="radio" name="gender" id="female">
-                <label class="form-label" for="female">female</label>
+                <label class="" for="female">female</label>
             </div>
-            <label class="form-label" for="location">Please share your current address</label>
+            <label class="form-label compulsory" for="location">Please share your current address</label>
             <div class="d-flex flex-column ">
-                <div class="input-group ">
-                    <input class="form-control" type="text" name="location" id="location" style="display: inline;">
-                    <button class="btn " id="get_loc" style="
-                            border: 2px solid;
-                            margin-left: 9px;
-                            border-radius: 4px;
-                            color: white;
-                            background: green;
-                            ">Pick Current Location</button>
+                <div >
+                    <input class="" type="text" name="location" id="location" style="display: inline;">
+                    <button class=" " id="get_loc" style="
+                    border: 2px solid;
+                    margin-left: 9px;
+                    border-radius: 4px;
+                    padding: 4px 14px;
+                    color: white;
+                    background: green;
+                    ">Pick Current Location</button>
                 </div>
                 <div id="city_suggestions" class="autocomplete-items "></div>
             </div>
+            <p class="error" id="cmp_frm_err_1"></p>
         </div>
+        
         <div class="detail_container" id="Educaiton">
-            <h2 class="text-center">Basic Details 2</h2>
-            <div class="mb-3">
-                <label for="birth_date" class="form-label">Birth Date</label>
-                <input type="text" class="cutom_inp" id="birth_date" placeholder="Choose Date"
-                    onfocus="(this.type='date')" onblur="(this.type='text')" type="text">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
-                <textarea class="cutom_inp" id="exampleFormControlTextarea1"
-                    placeholder="Describe yourself in few words " rows="1"></textarea>
-            </div>
-            <div class="">
-                <label class="form-label">Gender</label>
+            <h2 class="text-center">Education Details </h2>
+            <div class="mb-3" >
+                <label class="form-label compulsory" data-educating="">
+                    Are you pursuing your education?
+                </label>
                 <br>
-                <input type="radio" name="gender" id="male">
-                <label class="form-label" for="male">male</label>
-                <input type="radio" name="gender" id="female">
-                <label class="form-label" for="female">female</label>
+                <span class="info-card rounded" id="student">Yes</span>
+                <span class="info-card rounded" id="non_student">No</span>
             </div>
-            <label class="form-label" for="location">Please share your current address</label>
-            <div class="d-flex flex-column ">
-                <div class="input-group ">
-                    <input class="form-control" type="text" name="location" id="location" style="display: inline;">
-                    <button class="btn " id="get_loc" style="
-                            border: 2px solid;
-                            margin-left: 9px;
-                            border-radius: 4px;
-                            color: white;
-                            background: green;
-                            ">Pick Current Location</button>
-                </div>
-                <div id="city_suggestions" class="autocomplete-items "></div>
+            <div class="mb-3 visually-hidden" id="schooling_detail">
+                <label class="form-label compulsory" id="education_depend_label"></label>
+                <br>
+                <span class="info-card rounded" id="">10th or Below 10th</span>
+                <span class="info-card rounded" id="">12th Pass</span>
+                <span class="info-card rounded" id="">Diploma</span>
+                <span class="info-card rounded" id="">ITI</span>
+                <span class="info-card rounded" id="">Graduate</span>
+                <span class="info-card rounded" id="">Post Graduate</span>
             </div>
+            <div class="mb-3 " id="school_medium">
+                <label class="form-label" for="medium">School medium</label>
+                <br>
+                <select name="school_medium" class="" id="medium" style="width: 150px;  max-height: 100px;">
+                    <option value="English">English</option>
+                    <option value="Hindi">Hindi</option>
+                    <option value="Marathi">Marathi</option>
+                    <option value="Bengali">Bengali</option>
+                    <option value="Tamil">Tamil</option>
+                    <option value="Telugu">Telugu</option>
+                    <option value="Gujarati">Gujarati</option>
+                    <option value="Kannada">Kannada</option>
+                    <option value="Malayalam">Malayalam</option>
+                    <option value="Punjabi">Punjabi</option>
+                    <option value="Urdu">Urdu</option>
+                    <option value="Odia">Odia</option>
+                    <option value="Assamese">Assamese</option>
+                    <option value="Nepali">Nepali</option>
+                    <option value="Sanskrit">Sanskrit</option>
+                    <option value="Manipuri">Manipuri</option>
+                    <option value="Khasi">Khasi</option>
+                    <option value="Bodo">Bodo</option>
+                    <option value="Dogri">Dogri</option>
+                    <option value="Maithili">Maithili</option>
+                    <option value="Santali">Santali</option>
+                    <option value="Sindhi">Sindhi</option>
+                    <option value="Konkani">Konkani</option>
+                </select>
+            </div>
+            <p class="error" id="cmp_frm_err_2"></p>
         </div>
         <div class="detail_container" id="Experience">
             <h2 class="text-center">Basic Details 3</h2>
             <div class="mb-3">
-                <label for="birth_date" class="form-label">Birth Date</label>
+                <label for="birth_date" class="form-label compulsory">Birth Date</label>
                 <input type="text" class="cutom_inp" id="birth_date" placeholder="Choose Date"
                     onfocus="(this.type='date')" onblur="(this.type='text')" type="text">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
+                <label for="exampleFormControlTextarea1" class="form-label compulsory">Bio</label>
                 <textarea class="cutom_inp" id="exampleFormControlTextarea1"
                     placeholder="Describe yourself in few words " rows="1"></textarea>
             </div>
             <div class="">
-                <label class="form-label">Gender</label>
+                <label class="form-label compulsory">Gender</label>
                 <br>
                 <input type="radio" name="gender" id="male">
-                <label class="form-label" for="male">male</label>
+                <label class="form-label compulsory" for="male">male</label>
                 <input type="radio" name="gender" id="female">
-                <label class="form-label" for="female">female</label>
+                <label class="form-label compulsory" for="female">female</label>
             </div>
-            <label class="form-label" for="location">Please share your current address</label>
+            <label class="form-label compulsory" for="location">Please share your current address</label>
             <div class="d-flex flex-column ">
                 <div class="input-group ">
                     <input class="form-control" type="text" name="location" id="location" style="display: inline;">
@@ -122,28 +143,29 @@
                 </div>
                 <div id="city_suggestions" class="autocomplete-items "></div>
             </div>
+            <p class="error" id="cmp_frm_err_3"></p>
         </div>
         <div class="detail_container" id="Language">
             <h2 class="text-center">Basic Details 4</h2>
             <div class="mb-3">
-                <label for="birth_date" class="form-label">Birth Date</label>
+                <label for="birth_date" class="form-label compulsory">Birth Date</label>
                 <input type="text" class="cutom_inp" id="birth_date" placeholder="Choose Date"
                     onfocus="(this.type='date')" onblur="(this.type='text')" type="text">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
+                <label for="exampleFormControlTextarea1" class="form-label compulsory">Bio</label>
                 <textarea class="cutom_inp" id="exampleFormControlTextarea1"
                     placeholder="Describe yourself in few words " rows="1"></textarea>
             </div>
             <div class="">
-                <label class="form-label">Gender</label>
+                <label class="form-label compulsory">Gender</label>
                 <br>
                 <input type="radio" name="gender" id="male">
-                <label class="form-label" for="male">male</label>
+                <label class="form-label compulsory" for="male">male</label>
                 <input type="radio" name="gender" id="female">
-                <label class="form-label" for="female">female</label>
+                <label class="form-label compulsory" for="female">female</label>
             </div>
-            <label class="form-label" for="location">Please share your current address</label>
+            <label class="form-label compulsory" for="location">Please share your current address</label>
             <div class="d-flex flex-column ">
                 <div class="input-group ">
                     <input class="form-control" type="text" name="location" id="location" style="display: inline;">
@@ -157,28 +179,29 @@
                 </div>
                 <div id="city_suggestions" class="autocomplete-items "></div>
             </div>
+            <p class="error" id="cmp_frm_err_4"></p>
         </div>
         <div class="detail_container" id="Resume">
             <h2 class="text-center">Basic Details 5</h2>
             <div class="mb-3">
-                <label for="birth_date" class="form-label">Birth Date</label>
+                <label for="birth_date" class="form-label compulsory">Birth Date</label>
                 <input type="text" class="cutom_inp" id="birth_date" placeholder="Choose Date"
                     onfocus="(this.type='date')" onblur="(this.type='text')" type="text">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
+                <label for="exampleFormControlTextarea1" class="form-label compulsory">Bio</label>
                 <textarea class="cutom_inp" id="exampleFormControlTextarea1"
                     placeholder="Describe yourself in few words " rows="1"></textarea>
             </div>
             <div class="">
-                <label class="form-label">Gender</label>
+                <label class="form-label compulsory">Gender</label>
                 <br>
                 <input type="radio" name="gender" id="male">
-                <label class="form-label" for="male">male</label>
+                <label class="form-label compulsory" for="male">male</label>
                 <input type="radio" name="gender" id="female">
-                <label class="form-label" for="female">female</label>
+                <label class="form-label compulsory" for="female">female</label>
             </div>
-            <label class="form-label" for="location">Please share your current address</label>
+            <label class="form-label compulsory" for="location">Please share your current address</label>
             <div class="d-flex flex-column ">
                 <div class="input-group ">
                     <input class="form-control" type="text" name="location" id="location" style="display: inline;">
@@ -192,6 +215,7 @@
                 </div>
                 <div id="city_suggestions" class="autocomplete-items "></div>
             </div>
+            <p class="error" id="cmp_frm_err_5"></p>
         </div>
         </form>
     </div>  
