--- a/hatcher_source/templates/blocks/profile_base.html
+++ b/hatcher_source/templates/blocks/profile_base.html
@@ -19,10 +19,7 @@
         
     {% endblock css %}
 </head>
-<body style="margin: 0px;
-height: 100vh;
-background-color: #c8c6ef36;
-">
+<body>
     <nav  style="background-color: white;">
         <div >
           <a  href="#">
