--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -523,7 +523,10 @@ Showing {{jobs|length}} jobs based on your filter
   </div>
 </div>
 
-
+<a href="#top">
+  <img width="50" height="50" id="Up_Arrow" src="/media/logos/scroll_to_top.png"
+  alt="page-up-button"  />
+  </a>
 
 {% endblock content %}
 {% block javascripts %}
