--- a/hatcher_source/static/css/dashboard.css
+++ b/hatcher_source/static/css/dashboard.css
@@ -63,8 +63,11 @@ body{
     position: fixed;
     bottom: 40px;
     right: 50px;
+    transition: 0.1s;
 }
-
+#Up_Arrow:hover{
+    bottom: 43px;
+}
 /* Footer Css */
 .footer_mentions{
     display: flex;
