--- a/hatcher_source/templates/profile/complete_profile.html
+++ b/hatcher_source/templates/profile/complete_profile.html
@@ -26,12 +26,12 @@
                     <label for="birth_date" class="form-label compulsory ">Birth Date</label>
                     <br>
                     
-                        <input type="text" name="selectedDate" id="txtDate" placeholder="Choose date" />
+                        <input type="text" name="birth_date" id="birth_date" placeholder="Choose date" />
                 
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label compulsory ">Bio</label>
-                    <textarea class="cutom_inp" id="exampleFormControlTextarea1"
+                    <textarea class="cutom_inp" name="bio" id="exampleFormControlTextarea1"
                         placeholder="Describe yourself in few words " rows="1"></textarea>
                 </div>
                 <div class="mb-2">
@@ -57,6 +57,7 @@
                 color: #646419;
                 padding: 7px;
                 margin-top: 17px;
+                margin-bottom: 5px;
                 ">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" height="15" viewBox="0,0,256,256" style="margin-right: 5px;
                     margin-top: -2px;">
@@ -116,11 +117,12 @@
                     </label>
                 </div>
                 
-                <div class=" visually-hidden" id="college_detail_div">
+                <div class="visually-hidden" id="college_detail_div">
                     <div class="degree_div mb-3 visually-hidden" id="diploma_div">
-                        <label class="form-label compulsory " for="diploma_degree">Diploma Degree</label>
+                        <label class="form-label compulsory" for="diploma_degree">Diploma Degree</label>
                         <br>
                         <select name="diploma_degree" id="diploma_degree">
+                            <option value="" disabled selected>Select Diploma Degree</option>
                             <option value="Diploma in Engineering">Diploma in Engineering</option>
                             <option value="Diploma in Engineering (Civil)">Diploma in Engineering (Civil)</option>
                             <option value="Diploma in Engineering (Mechanical)">Diploma in Engineering (Mechanical)</option>
@@ -148,7 +150,7 @@
                         <label class="form-label compulsory" for="iti_degree">ITI Degree</label>
                         <br>
                         <select name="iti_degree" id="iti_degree">
-                            <option value="">Select ITI Trade</option> 
+                            <option value="" disabled selected>Select ITI Trade</option>
                             <option value="Fitter">Fitter</option>
                             <option value="Electrician">Electrician</option>
                             <option value="Welder">Welder</option>
@@ -174,7 +176,7 @@
                         <label for="graduateDegree" class="form-label compulsory">Graduate Degree</label>
                         <br>
                         <select name="graduateDegree" id="graduateDegree">
-                            <option value="">Select Graduate Degree</option>
+                            <option value="" disabled selected>Select Graduate Degree</option>
                             <option value="Bachelor of Arts (B.A.)">Bachelor of Arts (B.A.)</option>
                             <option value="Bachelor of Science (B.Sc.)">Bachelor of Science (B.Sc.)</option>
                             <option value="Bachelor of Commerce (B.Com.)">Bachelor of Commerce (B.Com.)</option>
@@ -194,7 +196,7 @@
                         <label for="postgraduateDegree" class="form-label compulsory">Postgraduate Degree</label>
                         <br>
                         <select name="postgraduateDegree" id="postgraduateDegree">
-                            <option value="">Select Postgraduate Degree</option>
+                            <option value="" disabled selected>Select Postgraduate Degree</option>
                             <option value="Master of Arts (M.A.)">Master of Arts (M.A.)</option>
                             <option value="Master of Science (M.Sc.)">Master of Science (M.Sc.)</option>
                             <option value="Master of Commerce (M.Com.)">Master of Commerce (M.Com.)</option>
@@ -213,28 +215,28 @@
                     <div class="mb-3">
                         <label for="Specialization" class="form-label compulsory">Specialization</label><br>
                         <select name="specialization" id="Specialization">
-                        <option value="">Select Specialization</option>
-                        <option value="Computer Science">Computer Science</option>
-                        <option value="Information Technology">Information Technology</option>
-                        <option value="Electronics and Communication Engineering">Electronics and Communication Engineering</option>
-                        <option value="Mechanical Engineering">Mechanical Engineering</option>
-                        <option value="Civil Engineering">Civil Engineering</option>
-                        <option value="Electrical Engineering">Electrical Engineering</option>
-                        <option value="Biotechnology">Biotechnology</option>
-                        <option value="Biomedical Engineering">Biomedical Engineering</option>
-                        <option value="Chemical Engineering">Chemical Engineering</option>
-                        <option value="Aerospace Engineering">Aerospace Engineering</option>
-                        <option value="Automobile Engineering">Automobile Engineering</option>
-                        <option value="Bioinformatics">Bioinformatics</option>
-                        <option value="Data Science">Data Science</option>
-                        <option value="Artificial Intelligence">Artificial Intelligence</option>
-                        <option value="Machine Learning">Machine Learning</option>
-                        <option value="Cybersecurity">Cybersecurity</option>
-                        <option value="Blockchain">Blockchain</option>
-                        <option value="Internet of Things (IoT)">Internet of Things (IoT)</option>
-                        <option value="Artificial Intelligence and Machine Learning">Artificial Intelligence and Machine Learning</option>
-                        <option value="Cloud Computing">Cloud Computing</option>
-                        <option value="Big Data Analytics">Big Data Analytics</option>
+                            <option value="" disabled selected>Select Specialization</option>
+                            <option value="Computer Science">Computer Science</option>
+                            <option value="Information Technology">Information Technology</option>
+                            <option value="Electronics and Communication Engineering">Electronics and Communication Engineering</option>
+                            <option value="Mechanical Engineering">Mechanical Engineering</option>
+                            <option value="Civil Engineering">Civil Engineering</option>
+                            <option value="Electrical Engineering">Electrical Engineering</option>
+                            <option value="Biotechnology">Biotechnology</option>
+                            <option value="Biomedical Engineering">Biomedical Engineering</option>
+                            <option value="Chemical Engineering">Chemical Engineering</option>
+                            <option value="Aerospace Engineering">Aerospace Engineering</option>
+                            <option value="Automobile Engineering">Automobile Engineering</option>
+                            <option value="Bioinformatics">Bioinformatics</option>
+                            <option value="Data Science">Data Science</option>
+                            <option value="Artificial Intelligence">Artificial Intelligence</option>
+                            <option value="Machine Learning">Machine Learning</option>
+                            <option value="Cybersecurity">Cybersecurity</option>
+                            <option value="Blockchain">Blockchain</option>
+                            <option value="Internet of Things (IoT)">Internet of Things (IoT)</option>
+                            <option value="Artificial Intelligence and Machine Learning">Artificial Intelligence and Machine Learning</option>
+                            <option value="Cloud Computing">Cloud Computing</option>
+                            <option value="Big Data Analytics">Big Data Analytics</option>
                         </select>
                     </div>
                     <div class="mb-3">
@@ -243,7 +245,7 @@
                         <input type="text" class="" id="college_name" name="college_name" placeholder="eg. St. Stephens">
                     </div>
                     <div class="d-flex">
-                        <div class="mb-3" style="width: 220px; margin-right:10px ;">
+                        <div class="mb-3" style="width: 220px; margin-right:10px;">
                             <label class="form-label compulsory">Start Date</label>
                             <input type="text" id="college_start_date" placeholder="Choose date">
                         </div>
@@ -253,10 +255,13 @@
                         </div>
                     </div>
                 </div>
+                
+
                 <div class="mb-3 visually-hidden " id="school_medium">
                     <label class="form-label compulsory" for="medium">School medium</label>
                     <br>
                     <select name="school_medium" class="" id="medium" style="width: 150px;  max-height: 100px;">
+                        <option value="" disabled selected>Select Medium</option>
                         <option value="English">English</option>
                         <option value="Hindi">Hindi</option>
                         <option value="Marathi">Marathi</option>
@@ -352,14 +357,35 @@
                     
                     <div class="mb-3 visually-hidden " id="notice_period">
                         <label class="form-label compulsory " id="notice_period_is"
-                        data-notice-period="">Notice Period</label>
+                            data-notice-period="">Notice Period</label>
                         <br>
-                        <span class="info-card rounded notice_periods" id="no_notice_period">No notice period</span>
-                        <span class="info-card rounded notice_periods" id="less_than_15_day">Less than 15 days</span>
-                        <span class="info-card rounded notice_periods" id="1_month">1 month</span>
-                        <span class="info-card rounded notice_periods" id="2_months">2 months</span>
-                        <span class="info-card rounded notice_periods" id="3_or_more_months">3 or more months</span>
+                    
+                        <input type="radio" class="visually-hidden" name="notice_period" value="no_notice_period" id="no_notice_period_radio">
+                        <label for="no_notice_period_radio">
+                            <span class="info-card rounded notice_periods" id="no_notice_period">No notice period</span>
+                        </label>
+                    
+                        <input type="radio" class="visually-hidden" name="notice_period" value="less_than_15_day" id="less_than_15_day_radio">
+                        <label for="less_than_15_day_radio">
+                            <span class="info-card rounded notice_periods" id="less_than_15_day">Less than 15 days</span>
+                        </label>
+                    
+                        <input type="radio" class="visually-hidden" name="notice_period" value="1_month" id="1_month_radio">
+                        <label for="1_month_radio">
+                            <span class="info-card rounded notice_periods" id="1_month">1 month</span>
+                        </label>
+                    
+                        <input type="radio" class="visually-hidden" name="notice_period" value="2_months" id="2_months_radio">
+                        <label for="2_months_radio">
+                            <span class="info-card rounded notice_periods" id="2_months">2 months</span>
+                        </label>
+                    
+                        <input type="radio" class="visually-hidden" name="notice_period" value="3_or_more_months" id="3_or_more_months_radio">
+                        <label for="3_or_more_months_radio">
+                            <span class="info-card rounded notice_periods" id="3_or_more_months">3 or more months</span>
+                        </label>
                     </div>
+
                     <div class="mb-3">
                         <label class="form-label compulsory" id="current_salary" >
                             Currenty Salary(Monthly)
@@ -389,11 +415,11 @@
                     <div class="d-flex">
                     <div class="mb-3" style="width: 220px; margin-right:10px ;">
                         <label class="form-label compulsory">Start Date</label>
-                        <input type="text" id="exp_start_date" placeholder="Choose date">
+                        <input type="text" name="work_start_date" id="exp_start_date" placeholder="Choose date">
                     </div>
                     <div class="mb-3" id="not_working_date_div" style="width: 220px;">
                         <label class="form-label compulsory">End Date</label>
-                        <input type="text" id="exp_end_date" placeholder="Choose date">
+                        <input type="text" name="work_end_date" id="exp_end_date" placeholder="Choose date">
                     </div>
                     <div class="mb-3" style="width: 220px;">
                         <label class="form-label compulsory" for="total_experience_year">Total Experience (Years)</label>
@@ -467,7 +493,7 @@
                 <p class="error" id="cmp_frm_err_4"></p>
             </div>
 
-            <div class="detail_container" id="Job_Type">
+            <div class="detail_container" id="job_prefference">
                 <h2 class="text-center">Preferred Job Type</h2>
                 <div class="mb-3">
                     <label class="form-label compulsory ">Preferred Shift</label>
@@ -508,13 +534,32 @@
                     <label for="part_time" class="check_label" style="width: 92%;">Part Time</label>
                     <input type="checkbox" name="part_time" value="part_time" class="group_checkbox"  id="part_time" >
                     </div>
+                    <div class="checkbox_div">
+                    <label for="hourly" class="check_label" style="width: 92%;">Hourly</label>
+                    <input type="checkbox" name="hourly" value="hourly" class="group_checkbox"  id="hourly" >
+                    </div>
                 </div>
                 <p class="error" id="cmp_frm_err_5"></p>
                 
             </div>
 
         </form>
-    </div>  
+    </div> 
+    <p style="
+    font-size: small;
+    background: #ffdfdf;
+    color: red;
+    padding: 7px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    " 
+    class="visually-hidden error_p">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" height="15" viewBox="0,0,256,256" style="margin-right: 5px;
+        margin-top: -2px;">
+            <g fill="red" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12,2c-5.511,0 -10,4.489 -10,10c0,5.511 4.489,10 10,10c5.511,0 10,-4.489 10,-10c0,-5.511 -4.489,-10 -10,-10zM12,4c4.43012,0 8,3.56988 8,8c0,4.43012 -3.56988,8 -8,8c-4.43012,0 -8,-3.56988 -8,-8c0,-4.43012 3.56988,-8 8,-8zM11,7v2h2v-2zM11,11v6h2v-6z"></path></g></g>
+            </svg>
+        Answer all the questions in this form.
+    </p>
     <div class="buttons">
         <button class="green_button" id="prev" disabled style="background-color: #5c5ce9db">Previous</button>
         <button class="green_button" id="next">Next</button>
