--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -43,7 +43,7 @@
 </div>
 
 
-  <h4 class="container" style="
+<h4 class="container" style="
   width: 73%;
   font-weight: 600;
   " id="total-search-result">
@@ -351,7 +351,7 @@ Showing {{jobs|length}} jobs based on your filter
             <div class="info-card rounded ">{{c.req_skill__education}}</div>
             {% endif %}
           </div>
-          <p class="card-updated"><small class="text-body-secondary">{{ c.updated_at|custom_timesince }}
+          <p class="card-updated"><small class="text-body-secondary">{{ c.updated_at|timesince }}
             </small></p>
         </div>
       </div>
